# pdf-extract-service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/pdf_extract/: config.py  logging.py  main.py  pipeline.py
tests/: conftest.py  make_fixtures.py  test_api.py  test_config.py  test_pipeline.py
