[project]
name = "pdf-extract-service"
version = "0.1.0"
description = "Self-hosted PDF text extraction service"
readme = "README.md"
authors = [
    { name = "Michael Wulff Nielsen", email = "mwulff@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.91.0",
    "fastapi>=0.136.1",
    "ocrmypdf>=17.4.2",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv.build-backend]
module-name = "pdf_extract"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.10",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
